# gysela-mini-app_io

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  installer.sh  launch_script.sh  pyproject.toml  spack.yaml
apps/: CMakeLists.txt  distributed_launch_script.sh  launch_script.sh
apps/compression/: CMakeLists.txt  PCA.py  README.md  evaluate_compression.py  gys_compress.cpp  landau2X2V_compression.cpp  launch_benchmark.py  params.yaml  params_landau_damping.yaml  params_two_stream.yaml  pdi_out.yaml  plot_fdistribu_xvx_video.py  requirements.txt
apps/io/: CMakeLists.txt  README.md  activate_deisa_spack_env.sh  deisa-dask_launch_script.sh  distributed_launch_script.sh  env-miniapp-gysela.sh  env-miniapp-io.sh  gys_io.cpp  gys_io.yaml  launch_script.sh  oar_deisa-dask_launch_script.sh  optimised_pdi_deisa.yaml  pdi_default.yaml  pdi_deisa.yaml  pdi_share_extents_deisa.yaml  seq_pdi.yaml
benchmark/: README.md  iops_config.yaml
python/: fluid_moments.py
python/utils/: cli.py  read_timing_stats.py
src/python/: Compressor.py  analytics.py  fluid_moments.py  optimised_analytics.py  share_extents_analytics.py
src/python/compression_methods/: PCA.py
src/python/utils/: verify_fluid_moments.py
src/tests/: test_IO.py
tests/: test_IO.py
toolchains/cpu.spack.mini_app_io_env/: mini-app-io-env.yaml  prepare.sh
toolchains/persee/xeon/: environment.sh
